--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="w-4/5 m-auto bg-slate-700">
-    <div id="root"></div>
+  <body class="bg-black   w-[85%] m-auto text-white h-full">
+    <div class="" id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
